폴더 구조 정리

--- a/sample/ConsoleApp/ConsoleApp.csproj
+++ b/sample/ConsoleApp/ConsoleApp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CSInside\CSInside.csproj" />
+    <ProjectReference Include="..\..\src\CSInside\CSInside.csproj" />
   </ItemGroup>
 
 </Project>
