--- a/test/CSInside.XUnit/CSInside.XUnit.csproj
+++ b/test/CSInside.XUnit/CSInside.XUnit.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CSInside\CSInside.csproj" />
+    <ProjectReference Include="..\..\src\CSInside\CSInside.csproj" />
   </ItemGroup>
 
 </Project>
